<resources>
    <string name="app_name">EXAMENPARCIAL</string>
    <string name="app_correo">Usuario</string>
    <string name="app_contrasena">Contraseña</string>
    <string name="app_ingresar">Sign In</string>
    <string name="app_salir">Volver</string>
    <string name="app_registrar"><u>Registrarse</u></string>
    <string name="app_aceptar">Register</string>
    <string name="name_Complet">Ingresa nombre completo</string>
    <string name="name_Pass">Ingresa nueva contraseña</string>
    <string name="name_Phone">Ingresa N° celular</string>
    <string name="name_Date">Ingresa fecha de nacimiento</string>
    <string name="title_screen">REGISTRAR NUEVO USUARIO!</string>
    <string name="title_game">JUEGO EN LINEA DE 3!</string>
    <string name="reset">RESETEAR EL JUEGO</string>
    <string name="pregunta_login">¿Aún no te has registrado?</string>
    <string name="casillero">casillero</string>
    <string name="Sexo_M">Masculino</string>
    <string name="Sexo_F">Femenino</string>
    <string-array name="combo_items">
        <item>Abogado</item>
        <item>Ingeniero</item>
        <item>Administrador</item>
        <item>Doctor</item>
        <item>Profesor</item>
        <item>Arquitecto</item>
    </string-array>
</resources>